# digipdam-agent-centralize

./: .env.example  .gitignore  Cargo.toml  README.md  changelog.md
src/: main.rs
src/configs/: database.rs  environment.rs  mod.rs
src/modules/: mod.rs
src/modules/device_parser/: parser.rs
