[package]
name = "PDAM-all-agents"
version = "0.0.1"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"